# nanoclaw-mini

./: .gitignore  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  USAGE.md  pyproject.toml
nanoclaw-mini-desktop/: Cargo.toml  README.md
nanoclaw-mini-desktop/src/: app.rs  main.rs  manager.rs
nanoclaw_mini/: __init__.py  __main__.py
nanoclaw_mini/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
nanoclaw_mini/agent/tools/: __init__.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py
nanoclaw_mini/bus/: __init__.py  events.py  queue.py
nanoclaw_mini/cli/: __init__.py  commands.py
nanoclaw_mini/config/: __init__.py  loader.py  paths.py  schema.py
nanoclaw_mini/cron/: __init__.py  service.py  types.py
nanoclaw_mini/heartbeat/: __init__.py  service.py
nanoclaw_mini/providers/: __init__.py  base.py  openai_codex_provider.py  registry.py
nanoclaw_mini/session/: __init__.py  manager.py
nanoclaw_mini/skills/: README.md
nanoclaw_mini/skills/clawhub/: SKILL.md
nanoclaw_mini/skills/skill-creator/: SKILL.md
nanoclaw_mini/skills/skill-creator/scripts/: quick_validate.py
nanoclaw_mini/skills/summarize/: SKILL.md
nanoclaw_mini/skills/tmux/: SKILL.md
nanoclaw_mini/skills/tmux/scripts/: find-sessions.sh
nanoclaw_mini/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
nanoclaw_mini/templates/memory/: MEMORY.md
nanoclaw_mini/utils/: __init__.py  evaluator.py  helpers.py
