[package]
name = "nanoclaw-mini-desktop"
version = "0.1.0"
edition = "2021"
description = "Rust desktop manager for installing and updating nanoclaw-mini"
license = "MIT"

[dependencies]
anyhow = "1.0"
directories = "5.0"
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow"] }
image = "=0.25.8"
